--- a/content/course/partizipieren-github/einheiten/01.md
+++ b/content/course/partizipieren-github/einheiten/01.md
@@ -1,5 +1,5 @@
 ---
-title: "01"
+title: "01 | Einführung in GitHub"
 date: 2019-03-19T12:50:13.000Z
 draft: false
 type: book
@@ -7,19 +7,20 @@ toc: true
 summary: Erstes Kennenlernen, Organisatorisches, Vorstellung des Veranstaltungskonzepts, Arbeitsauftrag
 ---
 
+In dieser Einheit lernen Sie die Browseroberfläche von GitHub und erste zentrale Konzepte kennen.
+
 ## Video: "Einführung in GitHub"
 
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/409314374' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
 
 ### Inhalte des Videos
 
-- sinnvolle Kontoeinstellungen
-- Grundlagen zur Benutzeroberfläche (Kanäle, private Kanäle und Direktnachrichten)
+- tbd
 
-## Auftrag zum Video
+## Aufgaben
 
-{{% notice aufgabe "Mattermost kennenlernen" %}}
-H5P
+{{% notice aufgabe "GitHub kennenlernen" %}}
+- Wie können Sie sich bei [jQuery](https://github.com/jquery/jquery) ein neues Feature wünschen? Was sollten Sie tun, bevor Sie Ihren Wunsch äußern?
 {{% /notice %}}
 
 ## Zusammenfassung der Aufträge
