--- a/content/einheiten/01.md
+++ b/content/einheiten/01.md
@@ -17,6 +17,12 @@ In dieser Einheit lernen Sie die Browseroberfläche von GitHub und erste zentral
 
 - tbd
 
+### Begriffe 
+
+Das Arbeiten mit Git, GitHub und GitLab bringt es mit sich, zahlreiche neue Fachtermini zu lernen, hinter denen sich teilweise komplexe Workflows und Konzepte verbergen. Die folgende Anwendung macht es vielleicht leichter, sich diese "Vokabeln" draufzuschaffen.
+
+{{% h5p-iframe "fachtermini" 67 %}}
+
 ## Aufgaben
 
 {{% notice aufgabe "GitHub kennenlernen" %}}
