Change Lernangebot to Lernmaterial

--- a/content/einheiten/01.md
+++ b/content/einheiten/01.md
@@ -17,19 +17,19 @@ In dieser Einheit lernen Sie die Oberfläche von GitHub sowie einige zentrale Ko
 - Sie treten einem Team in einer Organisation bei.
 - Sie diskutieren mit anderen Teammitgliedern (*Discussions*).
 - Sie formulieren Issues in einem Repository und antworten auf die anderer Teammitglieder.
-- Sie installieren die Software auf Ihren Rechnern, die im Lernangebot verwendet wird.
+- Sie installieren [die Software auf Ihren Rechnern, die im Lernmaterial verwendet wird](../../voraussetzungen/software/).
 
-## Begriffe 
-
-Das Arbeiten mit Git, GitHub und GitLab bringt es mit sich, zahlreiche neue Fachtermini zu lernen, hinter denen sich teilweise komplexe Workflows und Konzepte verbergen. Die folgende Anwendung macht es vielleicht leichter, sich diese "Vokabeln" draufzuschaffen.
-
-{{% h5p-iframe "fachtermini" 67 %}}
 
 ## Aufgaben
 
+{{% task title="Begriff und Konzepte" %}}
+Das Arbeiten mit Git, GitHub und GitLab bringt es mit sich, zahlreiche neue Fachtermini zu lernen, hinter denen sich teilweise komplexe Workflows und Konzepte verbergen. Die folgende Anwendung macht es vielleicht leichter, sich diese "Vokabeln" draufzuschaffen.
+{{% h5p-iframe "fachtermini" 70 %}}
+{{% /task %}}
+
 {{% task title="Issues verfassen und diskutieren" %}}
 1. Verfassen Sie in unserem Veranstaltungsrepository ein neues Issue, in dem Sie Ihre Projektidee beschreiben. Wählen Sie einen aussagekräftigen Titel und eine werbende Beschreibung mit einigen ersten Stichpunkten zu Ihrem Vorhaben.
-2. Suchen Sie sich ein Issue von einem anderen Teammitglied aus. Antworten Sie darauf mit einer Nachfrage, einer Idee oder mit anerkennenden Worten.
+2. Suchen Sie sich ein Issue von einem anderen Teammitglied aus. Antworten Sie darauf mit einer Nachfrage, einer Idee, mit anerkennenden Worten oder mit dem Vorschlag zusammenzuarbeiten.
 {{% /task %}}
 
 {{% task title="Mit Accounteinstellungen experimentieren" %}}
@@ -38,7 +38,8 @@ Das Arbeiten mit Git, GitHub und GitLab bringt es mit sich, zahlreiche neue Fach
 {{% /task %}}
 
 {{% task title="Software installieren" %}}
-1. Installieren Sie [die Software](../../voraussetzungen/software/), die Sie für dieses Lernangebot auf Ihren eigenen Rechnern benötigen.
+1. Installieren Sie [die Software](../../voraussetzungen/software/), die Sie für dieses Lernmaterial auf Ihren eigenen Rechnern benötigen. 
+2. Sollten Sie dabei Schwierigkeiten haben, machen Sie Screenshots von den Fehlermeldungen. Posten Sie diese in der Teamdiskussion.
 {{% /task %}}
 
 ## Deadline
