Add 0007 GitHub video

--- a/content/einheiten/01.md
+++ b/content/einheiten/01.md
@@ -19,6 +19,11 @@ In dieser Einheit lernen Sie die Oberfläche von GitHub sowie einige zentrale Ko
 - Sie formulieren Issues in einem Repository und antworten auf die anderer Teammitglieder.
 - Sie installieren [die Software auf Ihren Rechnern, die im Lernmaterial verwendet wird](../../voraussetzungen/software/).
 
+## Video: An Introduction to GitHub
+
+In dem folgenden Video erläutere ich den Aufbau der typischen Landingpage eines GitHub-Repositorys.
+
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed//qj9-Nn8rJyc' frameborder='0' allowfullscreen></iframe></div>
 
 ## Aufgaben
 
